--- a/sources/sass/pages/home.scss
+++ b/sources/sass/pages/home.scss
@@ -10,6 +10,9 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  transition-duration: .5s;
+  transition-property: opacity;
+  opacity: 1;
   &--content {
     position: relative;
     top: 0;
@@ -91,5 +94,46 @@
       background-size: cover;
       background-repeat: no-repeat;
     }
+  }
+}
+
+.intro {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  &--skip {
+    position: absolute;
+    bottom: 35px;
+    right: 50px;
+    color: #fff;
+    border: 2px solid #fff;
+    z-index: 100;
+    padding: 10px 30px;
+    opacity: .2;
+    transition-duration: .3s;
+    font-family: $title;
+    text-transform: uppercase;
+    display: inline-block;
+    &:hover {
+      color: #000;
+      opacity: 1;
+      background-color: #fff;
+    }
+  }
+  &--video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    transform: translateX(-50%) translateY(-50%);
   }
 }
