--- a/sources/sass/pages/chapter4.scss
+++ b/sources/sass/pages/chapter4.scss
@@ -1,4 +1,7 @@
 .chapter4 {
+  .player--video--title{
+    color:$white;
+  }
   .scene1 {
     background-image: url(../../assets/img/chapter4_full.jpg);
   }
